[metadata]
name = django-mailer
version = attr: mailer.__version__
description = A reusable Django app for queuing the sending of email
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Pinax Team
author_email = developers@pinaxproject.com
url = http://github.com/pinax/django-mailer/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django

[options]
packages = find:
package_dir = =src
python_requires = >=3.8
install_requires =
    Django >= 2.2
    lockfile >= 0.8

[options.packages.find]
where = src

[options.package_data]
mailer =
    locale/*/LC_MESSAGES/*.*
